# Semestr-3

./: .gitignore  README.md  cars.xml  files_starting_with_a.txt  main.ui  test.py
.tmp/: Филатов_МС_МК9-11_2024_ПР7_ИНФ.docx  Филатов_МС_МК9-11_2024_ПР8_ИНФ.docx
.tmp/Физика/: Титул_ДЗ.docx
.Дела группы/: Смотр2_ИУК4-31Б_1 семестр_24-25.xlsm  Численность студентов_ИУК31Б.docx
ASM/HW/: Суриков_НС_ИУК4-31Б_2024_ДЗ_СП.docx
ASM/LR1_PR1/: Суриков_НС_ИУК4-31Б_2024_ЛР1_СП.docx
ASM/LR2/: Var11.docx  Суриков_НС_ИУК4-31Б_2024_ЛР2_СП.docx  Суриков_НС_ИУК4-31Б_2024_ПР2_СП.docx
ASM/LR4/: uml.puml  Суриков_НС_ИУК4-31Б_2024_ЛР4_СП.docx
ASM/LR5/: Суриков_НС_ИУК4-31Б_2024_ЛР5_СП.docx
ASM/LR6/src/: CMakeLists.txt  LR6.asm  main.cpp
ASM/LR6/src/tasm_/: LR6.LST  LR6.asm
ASM/LR7/: Суриков_НС_ИУК4-31Б_2024_ЛР7_СП.docx
ASM/LR8/: Суриков_НС_ИУК4-31Б_2024_ЛР8_СП.docx
ASM/PR2/: Суриков_НС_ИУК4-31Б_2024_ПР2_СП.docx
ASM/PR3/: Суриков_НС_ИУК4-31Б_2024_ПР3_СП.docx
ASM/PR4/: PR4.asm
ASM/PR5/: Суриков_НС_ИУК4-31Б_2024_ПР5_СП.docx
DTaS/: README.md
DTaS/HW1/: Суриков_НС_ИУК4-31Б_2024_ДЗ1_ТиСД.docx
DTaS/HW2/: Суриков_НС_ИУК4-31Б_2024_ДЗ2_ТиСД.docx
DTaS/LR1/: Суриков_НС_ИУК4-31Б_2024_ЛР1_ТИСД.docx
DTaS/LR1/src/: CMakeLists.txt  CMenu.cpp  CMenu.h  CMenuItem.cpp  CMenuItem.h  DoubleList.cpp  DoubleList.h  FileLogging.cpp  FileLogging.h  MyError.cpp  MyError.h  main.cpp
ДМ/ДЗ/: main.py  (+1 more)
ОЭ/: КР_ОТВЕТЫ.docx
ПЯП/: README.md
Физика/: ДЗ №2 Модуль 5.docx  ТитулДЗ.docx  ТитулЛР.docx
Философия/: "Стрела".docx  Реферат_Фил.docx  Суриков_НС_ИУК4-31Б_2024_Философия.docx
(+493 files in other folders)
